@@ -28,6 +28,11 @@ loom {
 		}
 	}
 
+	runs {
+		client {
+			vmArgs "--enable-native-access=ALL-UNNAMED"
+		}
+	}
 }
 
 dependencies {
@@ -61,6 +66,10 @@ java {
 
 	sourceCompatibility = JavaVersion.VERSION_21
 	targetCompatibility = JavaVersion.VERSION_21
+
+	toolchain {
+		languageVersion = JavaLanguageVersion.of(21)
+	}
 }
 
 jar {
